# yume

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  justfile  opencode.jsonc
.opencode/: opencode.jsonc
.opencode/agents/: android-senior-engineer.md  architecture-qa-reviewer.md  general.md  llm-rag-chatbot-architect.md  mobile-ai-architecture-orchestrator.md  mobile-ocr-architect.md  requirements-coding-orchestrator.md  rust-senior-engineer.md  rust-uniffi-android-architect.md  senior-coding-engineer.md
.opencode/skills/mobile-ai-architecture/: SKILL.md
.opencode/skills/mobile-ai-architecture/references/: rust-uniffi-android-base.md
.opencode/skills/requirements-to-code/: SKILL.md
.opencode/skills/rust-skills/: SKILL.md
.opencode/skills/senior-implementation-engineering/: SKILL.md
android/: local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/yume/: MainActivity.kt
android/app/src/main/java/com/yume/network/: ApiClient.kt  ChatModels.kt
android/app/src/main/java/com/yume/rust/: YumeCore.kt
android/app/src/main/java/com/yume/rust/uniffi/yume/: yume.kt
android/app/src/main/java/com/yume/ui/chat/: ChatScreen.kt  ChatViewModel.kt
android/app/src/main/java/com/yume/ui/theme/: Theme.kt
android/app/src/main/res/values/: themes.xml
crates/yume-backend/: Cargo.toml
crates/yume-backend/src/: config.rs  main.rs
crates/yume-backend/src/routes/: chat.rs  health.rs  mod.rs  oauth.rs
crates/yume-contracts/: Cargo.toml
crates/yume-contracts/src/: chat.rs  document.rs  embedding.rs  error.rs  event.rs  lib.rs  ocr.rs  schema.rs  session.rs
crates/yume-core/: Cargo.toml
crates/yume-core/src/: lib.rs
crates/yume-embedding/: Cargo.toml
crates/yume-embedding/src/: lib.rs
crates/yume-ffi/: Cargo.toml  build.rs
crates/yume-ffi/src/: lib.rs  yume.udl
crates/yume-opencode-client/: Cargo.toml
crates/yume-opencode-client/src/: lib.rs
crates/yume-qdrant/: Cargo.toml
crates/yume-qdrant/src/: lib.rs
docs/: README.md  agent-policy.md  android-build.md  api.md  architecture.md  deployment.md  dev-harnesses.md  embedding.md  rag-policy.md  roadmap.md  rust-design.md  security.md
docs/diagrams/: architecture.d2
infra/backend/: Dockerfile
infra/opencode/: Dockerfile
infra/postgres/: init.sql
opencode-server/: opencode.jsonc
opencode-server/agents/: mobile-chat.md  safe-answer.md
opencode-server/skills/safe-final-answer/: SKILL.md
