[package]
name = "yume-opencode-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenCode HTTP client with SSE streaming and mock fallback"

[dependencies]
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
